test/classes/delete-free/type-casting.errors.good
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:34: Function 'makeBorrowed1' instantiated as: makeBorrowed1(type t = borrowed MyClass)
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed unmanaged MyClass
type-casting.chpl:35: Function 'makeBorrowed1' instantiated as: makeBorrowed1(type t = unmanaged MyClass)
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed owned MyClass
type-casting.chpl:36: Function 'makeBorrowed1' instantiated as: makeBorrowed1(type t = owned MyClass)
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:40: Function 'makeBorrowed1' instantiated as: makeBorrowed1(type t = borrowed MyClass?)
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed unmanaged MyClass?
type-casting.chpl:41: Function 'makeBorrowed1' instantiated as: makeBorrowed1(type t = unmanaged MyClass?)
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed owned MyClass?
type-casting.chpl:42: Function 'makeBorrowed1' instantiated as: makeBorrowed1(type t = owned MyClass?)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:55: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = MyClass)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:56: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = borrowed MyClass)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:57: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = unmanaged MyClass)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:58: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = owned MyClass)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:61: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = MyClass?)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:62: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = borrowed MyClass?)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:63: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = unmanaged MyClass?)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:64: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = owned MyClass?)
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:78: Function 'makeBorrowedQ1' instantiated as: makeBorrowedQ1(type t = borrowed MyClass)
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed unmanaged MyClass?
type-casting.chpl:79: Function 'makeBorrowedQ1' instantiated as: makeBorrowedQ1(type t = unmanaged MyClass)
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed owned MyClass?
type-casting.chpl:80: Function 'makeBorrowedQ1' instantiated as: makeBorrowedQ1(type t = owned MyClass)
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:84: Function 'makeBorrowedQ1' instantiated as: makeBorrowedQ1(type t = borrowed MyClass?)
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed unmanaged MyClass?
type-casting.chpl:85: Function 'makeBorrowedQ1' instantiated as: makeBorrowedQ1(type t = unmanaged MyClass?)
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed owned MyClass?
type-casting.chpl:86: Function 'makeBorrowedQ1' instantiated as: makeBorrowedQ1(type t = owned MyClass?)
